@@ -1,3 +1,8 @@
+2008-08-31 00:04 jannis
+
+	* autogen.sh: Don't print errors when trying to detect the revision
+	  of a git svn repository.
+
 2008-08-25 06:20 kelnos
 
     * Include panel settings in new settings manager dialog
